--- a/MyForumProject/Views/_ViewImports.cshtml
+++ b/MyForumProject/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MyForumProject
 @using MyForumProject.Models
+@using Microsoft.AspNetCore.Identity
+@using MyForumProject.Services.Ropositories;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
